Fix release instructions for Java 17